--- a/.github/workflows/update_readme_tree.yml
+++ b/.github/workflows/update_readme_tree.yml
@@ -3,7 +3,7 @@ name: Update README Tree
 on:
   push:
     branches:
-      - master # Or your default branch, e.g., master
+      - master # 或者你的主分支名，如 master
 
 jobs:
   update-tree:
@@ -13,35 +13,35 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Generate directory tree
-        # The -I flag ignores specified directories or files.
         run: |
           tree -I '.git|.github' > tree.md
 
-      - name: Update README.de with new tree
+      - name: Update README.md with new tree
         run: |
           python -c '
           import re
 
-          # Read the README file
+          # Open the README file once and perform all operations within this block
           with open("README.md", "r+", encoding="utf-8") as f:
+              # 1. Read the original content of README.md
               readme_content = f.read()
-          
-          # Read the generated tree file
-          with open("tree.md", "r", encoding="utf-8") as tree_file:
-              tree_content = tree_file.read()
+              
+              # 2. Read the content of the generated tree file
+              with open("tree.md", "r", encoding="utf-8") as tree_file:
+                  tree_content = tree_file.read()
 
-          # Use regex to find the markers and replace the content
-          new_readme_content = re.sub(
-              r"()(.*)()",
-              f"\\1\n```\n{tree_content}```\n\\3",
-              readme_content,
-              flags=re.DOTALL
-          )
-
-          # Write the new content back to the README
-          f.seek(0)
-          f.write(new_readme_content)
-          f.truncate()
+              # 3. Use regex to find the markers and create the new content
+              new_readme_content = re.sub(
+                  r"()(.*)()",
+                  f"\\1\n```\n{tree_content}```\n\\3",
+                  readme_content,
+                  flags=re.DOTALL
+              )
+              
+              # 4. Go back to the beginning of the file and write the new content
+              f.seek(0)
+              f.write(new_readme_content)
+              f.truncate()
           '
 
       - name: Commit and push if changed
@@ -49,7 +49,6 @@ jobs:
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
           git add README.md
-          # Only commit and push if there are actual changes
           if ! git diff --staged --quiet; then
             git commit -m "docs: auto-update README tree"
             git push
