--- a/.github/workflows/update_readme_tree.yml
+++ b/.github/workflows/update_readme_tree.yml
@@ -3,7 +3,7 @@ name: Update README Tree
 on:
   push:
     branches:
-      - master  # 已将分支修改为 master
+      - master
 
 jobs:
   update-tree:
@@ -18,7 +18,7 @@ jobs:
         run: |
           tree -I '.git|.github' > tree.md
 
-      # 步骤 3: 更新 README 文件
+      # 步骤 3: 更新 README 文件（使用新的标记）
       - name: Update README.md with new tree
         run: |
           python -c '
@@ -27,25 +27,28 @@ jobs:
               readme_content = f.read()
               with open("tree.md", "r", encoding="utf-8") as tree_file:
                   tree_content = tree_file.read()
+              
+              # *** 这里是关键的修改 ***
+              # 将正则表达式中的标记替换为您指定的新标记
               new_readme_content = re.sub(
-                  r"()(.*)()",
+                  r"(<repo tree start>)(.*)(<repo tree end>)",
                   f"\\1\n```\n{tree_content}```\n\\3",
                   readme_content,
                   flags=re.DOTALL
               )
+              
               f.seek(0)
               f.write(new_readme_content)
               f.truncate()
           '
 
-      # 新增步骤 4: 设置 SSH 密钥
-      # 这一步会从你刚才创建的 secret 中读取私钥，并配置好 SSH 环境
+      # 步骤 4: 设置 SSH 密钥
       - name: Set up SSH key
         uses: webfactory/ssh-agent@v0.9.0
         with:
           ssh-private-key: ${{ secrets.ACTIONS_DEPLOY_KEY }}
 
-      # 修改步骤 5: 使用 SSH 提交并推送
+      # 步骤 5: 使用 SSH 提交并推送
       - name: Commit and push if changed
         run: |
           git config --local user.email "action@github.com"
@@ -53,7 +56,6 @@ jobs:
           git add README.md
           if ! git diff --staged --quiet; then
             git commit -m "docs: auto-update README tree"
-            # 在推送前，将远程仓库地址设置为 SSH 格式
             git remote set-url origin git@github.com:zuoliangyu/NUEDC_TOPIC.git
             git push
           else
