--- a/.github/workflows/update_readme_tree.yml
+++ b/.github/workflows/update_readme_tree.yml
@@ -16,9 +16,9 @@ jobs:
       # 步骤 2: 生成目录树
       - name: Generate directory tree
         run: |
-          tree -I '.git|.github' > tree.md
+          tree --ascii -I '.git|.github' > tree.md
 
-      # 步骤 3: 更新 README 文件（使用新的标记）
+      # 步骤 3: 更新 README 文件 (使用更稳健的替换方法)
       - name: Update README.md with new tree
         run: |
           python -c '
@@ -26,13 +26,15 @@ jobs:
           with open("README.md", "r+", encoding="utf-8") as f:
               readme_content = f.read()
               with open("tree.md", "r", encoding="utf-8") as tree_file:
-                  tree_content = tree_file.read()
+                  # 使用 .strip() 清理 tree 输出内容，去除首尾多余的空白
+                  tree_content = tree_file.read().strip()
               
-              # *** 这里是关键的修改 ***
-              # 将正则表达式中的标记替换为您指定的新标记
+              # 使用 lambda 函数进行替换，这是最安全稳健的方式
+              # 确保代码块标记 ``` 能被正确添加
+              replacement_text = f"\n```\n{tree_content}\n```\n"
               new_readme_content = re.sub(
                   r"(<repo tree start>)(.*)(<repo tree end>)",
-                  f"\\1\n```\n{tree_content}```\n\\3",
+                  lambda m: m.group(1) + replacement_text + m.group(3),
                   readme_content,
                   flags=re.DOTALL
               )
