--- a/.github/workflows/update_readme_tree.yml
+++ b/.github/workflows/update_readme_tree.yml
@@ -3,64 +3,41 @@ name: Update README Tree
 on:
   push:
     branches:
-      - master
+      - master  # 触发分支改为 master
 
 jobs:
-  update-tree:
+  build:
     runs-on: ubuntu-latest
+
+    # 使用 permissions 替代 SSH 密钥，更安全、更简单
+    permissions:
+      contents: write # 授予工作流向仓库写入内容的权限
+
     steps:
-      # 步骤 1: 检出仓库代码
-      - name: Checkout repository
+      # 步骤 1: 检出你的代码
+      - name: Checkout Code
         uses: actions/checkout@v4
 
-      # 步骤 2: 生成目录树
-      - name: Generate directory tree
-        run: |
-          sudo apt-get update && sudo apt-get install -y tree
-          # 忽略 .git, .github 和 assets 目录
-          tree -I '.git|.github|assets' > tree.md
-
-      # 步骤 3: 更新 README 文件
-      - name: Update README.md with new tree
-        run: |
-          python -c '
-          import re
-          
-          with open("tree.md", "r", encoding="utf-8") as tree_file:
-              tree_content = tree_file.read()
-          
-          with open("README.md", "r+", encoding="utf-8") as f:
-              readme_content = f.read()
-          
-              # 核心修改：严格按照您的要求，使用 <tree start> 和 <tree end> 作为标识符
-              # 这个脚本会保留标识符，只更新它们之间的内容
-              new_readme_content = re.sub(
-                  r"(<tree start>)(.*)(<tree end>)",
-                  f"\\1\n\n```\n{tree_content}```\n\n\\3",
-                  readme_content,
-                  flags=re.DOTALL
-              )
-          
-              f.seek(0)
-              f.write(new_readme_content)
-              f.truncate()
-          '
-
-      # 步骤 4: 设置 SSH 密钥
-      - name: Set up SSH key
-        uses: webfactory/ssh-agent@v0.9.0
+      # 步骤 2: 使用现成的 Action 生成目录树
+      - name: Generate README Tree
+        uses: RavelloH/readme-tree@v1.1.0
         with:
-          ssh-private-key: ${{ secrets.ACTIONS_DEPLOY_KEY }}
+          # 核心配置：指定你的开始和结束标记
+          start-marker: '<tree start>'
+          end-marker: '<tree end>'
+          # 忽略不需要出现在目录树中的文件夹
+          ignore: '.git,.github,assets'
 
-      # 步骤 5: 提交并推送更改
-      - name: Commit and push if changed
+      # 步骤 3: 提交并推送更改 (安全版本)
+      - name: Commit and Push Changes
         run: |
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
+          # 添加可能已更改的 README.md 文件
           git add README.md
+          # 检查是否有实际更改，避免创建空的 commit
           if ! git diff --staged --quiet; then
             git commit -m "docs: auto-update README tree [skip ci]"
-            git remote set-url origin git@github.com:${{ github.repository }}.git
             git push
           else
             echo "No changes to commit."
