--- a/.github/workflows/update-readme-tree.yml
+++ b/.github/workflows/update-readme-tree.yml
@@ -9,6 +9,9 @@ on:
       - 'README.md'
   workflow_dispatch:
 
+permissions:
+  contents: write
+
 jobs:
   update-tree:
     runs-on: ubuntu-latest
@@ -18,6 +21,7 @@ jobs:
       uses: actions/checkout@v4
       with:
         token: ${{ secrets.GITHUB_TOKEN }}
+        fetch-depth: 0
         
     - name: Generate directory tree
       run: |
